# DataMigrationTool

./: .gitignore  README.md  pyproject.toml
config-platform/: REQUIREMENTS.md  (+1 more)
config-platform/api/: .env.example  README.md  pyproject.toml
config-platform/api/src/config_platform_api/: __init__.py  config.py  dependencies.py  exceptions.py  logging_setup.py  main.py
config-platform/api/src/config_platform_api/connectors/: __init__.py  aws_export.py  aws_rds_iam.py  azure_entra.py  azure_sql_database_connector.py  base.py  csv_s3_bucket_connector.py  legacy.py  local_csv_connector.py  mssql_odbc.py  mssql_onprem_connector.py  mysql_connector.py  payloads.py  postgresql_connector.py  registry.py  s3_auth.py  sql_helpers.py
config-platform/api/src/config_platform_api/middleware/: request_logging.py
config-platform/api/src/config_platform_api/models/: connections.py  connectors.py  enums.py  introspection.py  migrations.py  table_ddl.py  validation.py
config-platform/api/src/config_platform_api/routers/: connections.py  connectors.py  health.py  introspection.py  migrations.py
config-platform/api/tests/: test_connection_builder.py  test_connection_service.py  test_connection_store_errors.py  test_connections_api.py  test_connector_registry.py  test_error_handling.py  test_health.py  test_legacy_connection_migration.py  test_migration_export.py  test_migration_export_api.py  test_migration_factory.py  test_migration_store_errors.py  test_migration_validate_api.py  test_migrations_api.py  test_p12_connectors.py  test_p13_connectors.py  test_p14_connectors.py  test_p15_local_csv.py  test_p16_connectors.py  test_s3_file_columns.py  test_sanitize_connection_errors.py  test_table_copy_structure_api.py  test_table_ddl_service.py
(+246 files in other folders)
