[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "migration-engine"
version = "0.1.0"
description = "Configuration-driven multi-tenant ELT migration SQL generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
migration-engine = "migration_engine.__main__:app"

[tool.hatch.build.targets.wheel]
packages = ["src/migration_engine"]

[tool.hatch.build.targets.sdist]
include = ["src/migration_engine", "config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: integration-style SQL structure tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
